RESOLVED FIXED48487
[chromium] fix textInputController.{selectedRange,markedRange}
https://bugs.webkit.org/show_bug.cgi?id=48487
Summary [chromium] fix textInputController.{selectedRange,markedRange}
Tony Chang
Reported 2010-10-27 17:18:43 PDT
[chromium] fix textInputController.{selectedRange,markedRange}
Attachments
Patch (4.76 KB, patch)
2010-10-27 17:20 PDT, Tony Chang
tkent: review+
Tony Chang
Comment 1 2010-10-27 17:20:10 PDT
Tony Chang
Comment 2 2010-10-27 17:21:04 PDT
This doesn't fix any tests, but it gets us closer to fixing some firstRectForCharacterRange tests.
Ryosuke Niwa
Comment 3 2010-10-27 18:02:13 PDT
Comment on attachment 72119 [details] Patch LGTM.
Kent Tamura
Comment 4 2010-10-27 18:41:04 PDT
Comment on attachment 72119 [details] Patch ok
Tony Chang
Comment 5 2010-10-28 10:10:33 PDT
Note You need to log in before you can comment on or make changes to this bug.