2010-10-28  Tony Chang  <tony@chromium.org>

Reviewed by Kent Tamura.

        [chromium] fix textInputController.{selectedRange,markedRange}
        https://bugs.webkit.org/show_bug.cgi?id=48487

        * platform/chromium/test_expectations.txt: correct some comments about
            firstRectForCharacterRange.
2010-10-28  Tony Chang  <tony@chromium.org>

        Reviewed by Kent Tamura.

        [chromium] fix textInputController.{selectedRange,markedRange}
        https://bugs.webkit.org/show_bug.cgi?id=48487

        * DumpRenderTree/chromium/TextInputController.cpp:
        (TextInputController::markedRange): Return arrays of ints, rather than a string
        (TextInputController::selectedRange): Ditto.

Canonical link: https://commits.webkit.org/61300@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@70786 268f45cc-cd09-0410-ab3c-d52691b4dbfc